crates/wac-parser/tests/resolution/fail/duplicate-variant-case.wac
package test:comp;

type x = string;

variant x {
    a(x),
    b,
    a,
}